--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "awilix": "^10.0.1",
+    "axios": "^1.6.8",
     "express": "^4.18.3",
     "mediasoup": "3",
     "socket.io": "^4.7.4",
