--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "awilix": "^10.0.1",
     "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "express": "^4.18.3",
     "mediasoup": "3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.25",
     "@types/uuid": "^9.0.8",
