--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "awilix": "^10.0.1",
-    "axios": "^1.6.8",
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "mediasoup": "3",
+    "redis": "^4.6.13",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
