--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "awilix": "^10.0.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mediasoup": "3",
     "redis": "^4.6.13",
